syntax = "proto3";

option go_package = ".;protos";
option csharp_namespace = "Protos";

message Vector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}